react configured successfully

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -10,7 +10,10 @@
 <body>
 
   <main>
-    <div>
+    <div id="root" style="height: 100vh">
+      <!-- This div is where our app will run -->
+    </div>
+    {{--  <div>
       <h1 class="title"> It Works! </h1>
       <p class="subtitle">
         Congratulations, you have just created your first AdonisJS app.
@@ -29,7 +32,7 @@
           If you run into problems, you can reach us on <a href="https://discord.gg/vDcEjq6?">Discord</a> or the <a href="https://forum.adonisjs.com/">Forum</a>.
         </li>
       </ul>
-    </div>
+    </div>  --}}
   </main>
 </body>
 </html>
